--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,8 @@
 body{
+    margin: 0;
+    padding: 0;
+    position: relative;
+    height: 100vh;
     background-color: black /*#1D1D1F*/;
     color: white;
 }
@@ -13,4 +17,41 @@ a{
     text-decoration: none;
     font-weight: bold;
     font-size: 18px;
+}
+.container {
+    position: relative;
+    height: 100%;
+}
+.icon {
+    position: absolute;
+    top: 0%; /* Ajusta a posição vertical do texto */
+    left: 0%; /* Ajusta a posição horizontal do texto */
+    padding: 20px; /* Espaçamento interno */
+}
+.img-top-left {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100px; /* Ajuste o tamanho conforme necessário */
+    height: auto;
+}
+
+.img-bottom-right {
+    position: absolute;
+    bottom: -5%;
+    right: 0;
+    width: 100px; /* Ajuste o tamanho conforme necessário */
+    height: auto;
+}
+.texto {
+    position: absolute;
+    top: 7%; /* Ajusta a posição vertical do texto */
+    /*left: 50%;  Ajusta a posição horizontal do texto */
+    /*transform: translate(-50%, -50%);  Centraliza o texto */
+    text-align: justify;
+    font-size: 20px; /* Ajuste o tamanho da fonte conforme necessário */
+    padding: 15px; /* Espaçamento interno */
+}
+#JOB{
+    text-align: center;
 }
