tentativa de coreção n°10000 css fdp

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -59,3 +59,14 @@ a{
         bottom: -10%;
     }
 }
+
+@media (max-width: 600px) {
+    .img-bottom-right {
+        bottom: -30%;
+    }
+}
+@media (max-width: 500px) {
+    .img-bottom-right {
+        bottom: -50%;
+    }
+}
